RESOLVED FIXED149318
Backdrop Filter should not be visible if element has visibility:hidden
https://bugs.webkit.org/show_bug.cgi?id=149318
Summary Backdrop Filter should not be visible if element has visibility:hidden
Joseph Pecoraro
Reported 2015-09-17 16:59:46 PDT
* SUMMARY Backdrop Filter should not be visible if element has visibility:hidden. * TEST <style> .back { width: 300px; height: 150px; margin: 100px; background: blue; } .top { width: 1000px; height: 50px; position: absolute; left: 0; top: 150px; -webkit-backdrop-filter: blur(50px); visibility: hidden; } </style> <div class="back"> <div class="top"></div> </div> * STEPS TO REPRODUCE 1. Open test => did not expect div with visibility:hidden to still have blur visible
Attachments
Patch (12.48 KB, patch)
2016-04-21 18:00 PDT, Dean Jackson
no flags
Patch (14.72 KB, patch)
2016-04-21 18:35 PDT, Dean Jackson
simon.fraser: review+
Radar WebKit Bug Importer
Comment 1 2015-09-17 17:01:04 PDT
Brian Ward
Comment 2 2015-12-28 16:43:46 PST
Just wanted to add that if the parent element has visibility:hidden, the child that has the blur will still composit the blur onto the page, even though it is expected that all content within the parent, including the child would be hidden.
Dean Jackson
Comment 3 2016-04-21 18:00:43 PDT
Simon Fraser (smfr)
Comment 4 2016-04-21 18:21:42 PDT
Comment on attachment 276991 [details] Patch This needs to fix PlatformCALayerRemote too.
Dean Jackson
Comment 5 2016-04-21 18:35:20 PDT
Simon Fraser (smfr)
Comment 6 2016-04-21 18:41:21 PDT
Comment on attachment 276995 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=276995&action=review > LayoutTests/ChangeLog:15 > + * css3/filters/backdrop/backdrop-with-visibility-hidden-changing-expected.txt: Added. > + * css3/filters/backdrop/backdrop-with-visibility-hidden-changing.html: Added. > + * css3/filters/backdrop/backdrop-with-visibility-hidden-expected.txt: Added. > + * css3/filters/backdrop/backdrop-with-visibility-hidden.html: Added. Maybe include a ref test?
Dean Jackson
Comment 7 2016-04-21 18:49:17 PDT
Dean Jackson
Comment 8 2016-04-21 18:49:33 PDT
Note You need to log in before you can comment on or make changes to this bug.