Source/WebCore/platform/graphics/ca/PlatformCALayer.h
@@ -155,6 +155,7 @@ public:
     virtual TransformationMatrix sublayerTransform() const = 0;
     virtual void setSublayerTransform(const TransformationMatrix&) = 0;
 
+    virtual bool isHidden() const = 0;
     virtual void setHidden(bool) = 0;
 
     virtual bool geometryFlipped() const = 0;
