Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.h
@@ -87,6 +87,7 @@ public:
     TransformationMatrix sublayerTransform() const override;
     void setSublayerTransform(const TransformationMatrix&) override;
 
+    bool isHidden() const override;
     void setHidden(bool) override;
 
     void setBackingStoreAttached(bool) override;
