Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemote.h
@@ -91,6 +91,7 @@ public:
     WebCore::TransformationMatrix sublayerTransform() const override;
     void setSublayerTransform(const WebCore::TransformationMatrix&) override;
 
+    bool isHidden() const override;
     void setHidden(bool) override;
 
     void setBackingStoreAttached(bool) override;
